# cv-tooler

./: README.md  manage.py  pyproject.toml
cvbuild/: apps.py
cvmain/: asgi.py  settings.py  urls.py  wsgi.py
