[tool.poetry]
name = "cv-tooler"
version = "0.1.0"
description = "a cv builder"
authors = ["Jean Paul Fortuno <jp.fortuno@nullpod.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
