[tool.poetry]
name = "cv-tooler"
version = "0.1.0"
description = "a cv builder"
authors = ["Jean Paul Fortuno <jp.fortuno@nullpod.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
black = "^21.6b0"
Pillow = "^8.2.0"
Markdown = "^3.3.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
